--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,38 +1,53 @@
 
-
-<div class="arr row">
-    <div class="col s4">
-      <div class="card small">
-        <div class="card-content">
-           <h3> <%=  link_to 'Missing', "/all_animals/missing" %></h3>
+ <div class="row">
+     
+      <div class ="row #e0f2f1 teal lighten-5">
+      <div class="col s6 "><h2>Help find home for animals in need</h2> </div>
+      <div class="col s6 "><h3>browos animals here</h3>
+      <div class="arr row">
+    <div class="col s4 ">
+    <div class="card blue-grey darken-1">
+     <div class="card-content white-text">
+           <h5> <%=  link_to 'Missing', "/all_animals/missing" %></h5>
         </div>
       </div>
     </div>
 
-    <div class="col s4">
-      <div class="card small">
-        <div class="card-content">
-           <h3> <%=  link_to 'Found', "/all_animals/found" %></h3>
+    <div class="col s4 ">
+    <div class="card blue-grey darken-1">
+     <div class="card-content white-text">
+     
+           <h5> <%=  link_to 'Found', "/all_animals/found" %></h5>
         </div>
       </div>
     </div>
   </div>
  
  <div class="arr row">
-    <div class="col s4">
-      <div class="card small">
-        <div class="card-content">
-           <h3> <%=  link_to "For Adoption",  "/all_animals/for-adoption" %></h3>
+     <div class="col s4 ">
+    <div class="card blue-grey darken-1">
+     <div class="card-content white-text">
+           <h5> <%=  link_to "For Adoption",  "/all_animals/for-adoption" %></h5>
         </div>
       </div>
     </div>
 
-    <div class="col s4">
-      <div class="card small">
-        <div class="card-content">
-           <h3> <%=  link_to "Animals in need",  "/all_animals/animals-in-need"%></h3>
+     <div class="col s4 ">
+    <div class="card blue-grey darken-1">
+     <div class="card-content white-text">
+           <h5> <%=  link_to "Animals in need",  "/all_animals/animals-in-need"%></h5>
         </div>
       </div>
     </div>
   </div>
- 
+ </div>
+      </div>
+
+
+    
+    </div>
+ <div class ="col s12 #84ffff cyan accent-1">
+       lol</div> 
+             <div class="col s12">col12 here is the logo</div>
+
+</div>
