--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -1,5 +1,9 @@
+<div class = "row">
+<div class = "col6"></div>
 <%= form_for @animal do |f| %>
 <div>
+  
+
 <%= f.label :title %>
 </div>
 <div>
@@ -25,7 +29,7 @@
 <%= f.text_field :animal_type  , required: true %>
 </div>
 
-
+<div >
     <%= f.label :gender %><br />
     <%= f.label :gender, "Female", :value => "female"  %>
     <%= f.radio_button :gender, "female"  %>
@@ -55,11 +59,11 @@
 <%= f.text_field :location  , required: true %>
 </div>
 
+<div>
+<%= f.label :status %>
+<%= f.select :status, ['missing', 'found','animals-in-need','for-adoption']%>
 
-
-
-
-
+</div>
 
 
 
