working with uploader

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+[type="radio"]:not(:checked),
+[type="radio"]:checked {
+  position: relative;
+  opacity: 1;
+  pointer-events: inherit;
+  width: auto;
+}
