--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,6 +20,14 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
+  <div>
+<%= f.label "username" %>
+<%= f.text_field "username" %>
+</div>
+<div>
+<%= f.label "image" %>
+<%= f.file_field "image" %>
+</div>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
