--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -2,5 +2,5 @@
 
     <% @results.each do |result| %>  
         <%= result.title %><br>  
-        <%= image_tag result.image %>
+        <%= cl_image_tag result.image %>
     <% end %>
