--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -10,8 +10,7 @@
         <div class="card-content">
       
        <%= @animal.title %>
- <div>
- <%= image_tag @animal.image , :size => "260x180"%></div>
+ <div><%= cl_image_tag  @animal.image , :size => "260x180"%></div>
  <p>Type: <%= @animal.animal_type %></p>
  <p>Gender: <%= @animal.gender %></p>
  <p>Age: <%= @animal.dob %></p>
@@ -20,11 +19,10 @@
       </div>
       </div>
       <div class="col s8">
-      colum 2
         <!-- Promo Content 2 goes here -->
    <section class="section comments">
     <div class="container">
-        <h2 class="subtitle is-5"><strong><%= @animal.comments.count %></strong> Comments</h2>
+        <h4 class="subtitle is-5"><strong><%= @animal.comments.count %></strong> Comments</h4>
         <%#= show the user and comment content from comment.html  %>
         <%= render @animal.comments %>
         <div class="comment-form">
@@ -34,16 +32,17 @@
         </div>
     </div>
 </section> 
-
 </div> 
-   </div>
-    </div>
-    <div class="row">
 
-      <div class="col s6">
-          <a class="waves-effect waves-light btn"><i class="material-icons left"></i>Missing</a>
-                    <a class="waves-effect waves-light btn"><i class="material-icons left"></i>Found</a>
-                    <a class="waves-effect waves-light btn"><i class="material-icons left"></i>For Adoption</a>
 
-           </div>
-    </div>
+
+
+
+        
+<%= link_to "Update status to adopted", "/animals/#{params[:id]}/adopted", method: :put %>
+<%= link_to "Update status to returned", "/animals/#{params[:id]}/returned", method: :put %>
+
+  
+</div>
+   
+ 
