--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,9 +1,8 @@
  <%= form_for([@animal, @animal.comments.build]) do |f| %>
 
-<div class="field">
-  <div class="control">
-    <%= f.text_field :body %>
-  </div>
-</div>
+<div class="input-field col s12">
+         
+<%= f.text_field :body %>
+ 
 <%= f.submit %>
-<% end %> 
+<% end %>   </div>
