--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,46 @@
 
 <div class="row">
       <div class="col s12">user profile here
-      <p><%= @user.email %></p></div>
-        <div class="col s4">empty</div>
-      <div class="col s6">here is animals
-      <h3>All Posts by this user</h3>
-<% @user.animals.each do |animal| %>
-<p><%= link_to animal.title, animal_path(animal) %>  </p> 
-<% end %></div>
+       <ul class="collection">
+
+     <li class="collection-item avatar">
+    <div class="circle responsive-img">  <%= cl_image_tag current_user.image %> </div> </li>
+     <li><%= @user.username %> </li>
+     <li><%= @user.email %> </li>
+     
+  </ul>
+ </div>
+        <div class="col s4"><h4>empty</h4></div>
+      <div class="col s8">
+      <h4>User's Pets</h4>
+<% @user.animals.in_groups_of(3, false).each do |group| %>
+     
+<div class="row">
+    
+ <% group.each do |animal| %>
+ <div class="col s4">
+      <div class="card">
+        <div class="card-image">
+          <%= cl_image_tag animal.image %>
+          <span class="card-title"><%= animal.title %> </span>
+        </div>
+        <div class="card-content">
+          <p> <%= animal.description %></p>
+          <p> in <%= animal.city %></p>
+          <p>  <%= animal.animal_type %>, <%= animal.gender %></p>
+        </div>
+        <div class="card-action">
+          <a href=<%= animal_path(animal) %>>Details</a>
+        </div>
+      </div>
+       </div>
+      <% end %>
+   
+  </div>  
+  <% end %>
+
+
+
+
+</div>
 </div>
