updating the design

--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -55,7 +55,7 @@
 </div>
 
 <div>
-<%= f.label :status %>
+<%= f.label "choose the animal status:"%>
 <%= f.select :status, ['missing', 'found','animals-in-need','for-adoption']%>
 </div>
 
