--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,7 +30,18 @@
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
+ <div>
+ <div class="field">
+<%= f.label :username %>
+<%= f.text_field :username %>
+</div>
+<div>
+ <div class="field">
+<%= f.label :image %>
+<%= f.file_field :image %>
+</div>
 
+</div>
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
