--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,6 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-
-
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -24,7 +21,8 @@
      
      <li> <%= link_to "all animals", animals_path %></li>
       <li><% if user_signed_in? %></li>
-      <li><%= link_to "Add Post", new_animal_path %></li>
+      <li><%= link_to "Report New Animal", new_animal_path %></li>
+
       <li><%= link_to current_user.email, user_path(current_user) %></li>
        <li> <%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
       <% else %>
@@ -46,12 +44,12 @@
 
   </nav>
  
-  <p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-<div class="container  lighten-2">
+ 
+<div class="container  teal lighten-5">
     <%= yield %>
   </div>
-
+ <p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 
 
 
