--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,14 @@
 
- <div class="row">
+ <div class="row teal lighten-5">
      
-      <div class ="row #e0f2f1 teal lighten-5">
-      <div class="col s6 "><h2>Help find home for animals in need</h2> </div>
-      <div class="col s6 "><h3>browos animals here</h3>
+      <div class ="row">
+      <div class="col s7 ">
+  
+    <div class="responsive-img"><%= image_tag 'banner.png' %></div>
+ </div>
+      <div class="col s5 "><h5>browos animals here</h5>
       <div class="arr row">
-    <div class="col s4 ">
+    <div class="col s6  ">
     <div class="card blue-grey darken-1">
      <div class="card-content white-text">
            <h5> <%=  link_to 'Missing', "/all_animals/missing" %></h5>
@@ -13,7 +16,7 @@
       </div>
     </div>
 
-    <div class="col s4 ">
+    <div class="col s6">
     <div class="card blue-grey darken-1">
      <div class="card-content white-text">
      
@@ -23,8 +26,8 @@
     </div>
   </div>
  
- <div class="arr row">
-     <div class="col s4 ">
+ <div class="arr row ">
+     <div class="col s6 ">
     <div class="card blue-grey darken-1">
      <div class="card-content white-text">
            <h5> <%=  link_to "For Adoption",  "/all_animals/for-adoption" %></h5>
@@ -32,7 +35,7 @@
       </div>
     </div>
 
-     <div class="col s4 ">
+     <div class="col s6 ">
     <div class="card blue-grey darken-1">
      <div class="card-content white-text">
            <h5> <%=  link_to "Animals in need",  "/all_animals/animals-in-need"%></h5>
@@ -41,13 +44,49 @@
     </div>
   </div>
  </div>
-      </div>
+</div>
 
 
     
     </div>
- <div class ="col s12 #84ffff cyan accent-1">
-       lol</div> 
-             <div class="col s12">col12 here is the logo</div>
+          <div class ="row teal accent-3">
+
+ <div class ="col s6  white">
+      
+       <h3>Sign up to report animals in need</h3>
+
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= devise_error_messages! %>
+
+  <div class="field">
+    <%= f.label :email %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :password %>
+    <% if @minimum_password_length %>
+    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <% end %><br />
+    <%= f.password_field :password, autocomplete: "new-password" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  </div>
+ 
+
+  <div class="actions waves-effect waves-light btn">
+    <%= f.submit "Sign up" %>
+  </div>
+<% end %>
+
+
+
+</div> </div> 
+      <div class="col s12 teal lighten-5"> s</div>
+</div> 
+       
 
 </div>
