--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,12 @@
 
 <div class="row">
-      <div class="col s12">user profile here
+      <div class="col s12">
        <ul class="collection">
 
      <li class="collection-item avatar">
-    <div class="circle responsive-img">  <%= cl_image_tag current_user.image %> </div> </li>
-     <li><%= @user.username %> </li>
-     <li><%= @user.email %> </li>
+    <div class="circle responsive-img">  <%= cl_image_tag current_user.image  , :size => "50x50"%> </div>  <%= @user.username %> <br>user</li>
+    <li> <%= link_to "Edit Profile", edit_user_registration_path %></li>
+
      
   </ul>
  </div>
@@ -22,11 +22,10 @@
       <div class="card">
         <div class="card-image">
           <%= cl_image_tag animal.image %>
-          <span class="card-title"><%= animal.title %> </span>
         </div>
         <div class="card-content">
+       <h5><%= animal.title %></h5> 
           <p> <%= animal.description %></p>
-          <p> in <%= animal.city %></p>
           <p>  <%= animal.animal_type %>, <%= animal.gender %></p>
         </div>
         <div class="card-action">
@@ -40,7 +39,6 @@
   <% end %>
 
 
-
-
 </div>
 </div>
+    
