--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,5 +1,7 @@
 
-
+<%= form_tag "/animals/location", method: :get do %>
+  <%= text_field_tag "location", "" %>
+<% end %>
  
 <% @animals.in_groups_of(3, false).each do |group| %>
      
