--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   
   <nav>
     <div class="nav-wrapper #80cbc4 teal lighten-3">
-      <a href="#!" class="brand-logo">Logo</a>
+      <a href="/" class="brand-logo">Help Animals</a>
       <ul class="right hide-on-med-and-down">
      
      
@@ -56,27 +56,11 @@
 
 
     <footer class="page-footer #80cbc4 teal lighten-3">
-          <div class="container">
-            <div class="row">
-              <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-              </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
+            
           <div class="footer-copyright">
             <div class="container">
-            © 2018 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            Copyright © 2018 Help Animals 
+            <a class="grey-text text-lighten-4 right" href="https://github.com/dalalsa/project1">Code on Github</a>
             </div>
           </div>
         </footer>
