--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,26 +1,30 @@
 
+
  <div class="row teal lighten-5">
      
       <div class ="row">
-      <div class="col s7 ">
+      <div class="col s12 center">
   
     <div class="responsive-img"><%= image_tag 'banner.png' %></div>
  </div>
-      <div class="col s5 "><h5>browos animals here</h5>
+      <div class="col s12 ">
       <div class="arr row">
     <div class="col s6  ">
-    <div class="card blue-grey darken-1">
-     <div class="card-content white-text">
-           <h5> <%=  link_to 'Missing', "/all_animals/missing" %></h5>
+    <div class="card white" >
+     <div class="card-content white-text center">
+     <%= image_tag 'missing.png' %>
+           <h5> <%=  link_to 'enter', "/all_animals/missing" %></h5>
         </div>
       </div>
     </div>
 
     <div class="col s6">
-    <div class="card blue-grey darken-1">
-     <div class="card-content white-text">
-     
-           <h5> <%=  link_to 'Found', "/all_animals/found" %></h5>
+    <div class="card white">
+     <div class="card-content white-text center">
+         
+     <%= image_tag 'found.png' %>
+
+           <h5> <%=  link_to 'enter', "/all_animals/found" %></h5>
         </div>
       </div>
     </div>
@@ -28,17 +32,20 @@
  
  <div class="arr row ">
      <div class="col s6 ">
-    <div class="card blue-grey darken-1">
-     <div class="card-content white-text">
-           <h5> <%=  link_to "For Adoption",  "/all_animals/for-adoption" %></h5>
+    <div class="card white">
+     <div class="card-content white-text center">
+          <%= image_tag 'adopt.png' %>
+
+           <h5> <%=  link_to "enter",  "/all_animals/for-adoption" %></h5>
         </div>
       </div>
     </div>
 
      <div class="col s6 ">
-    <div class="card blue-grey darken-1">
-     <div class="card-content white-text">
-           <h5> <%=  link_to "Animals in need",  "/all_animals/animals-in-need"%></h5>
+    <div class="card white">
+     <div class="card-content white-text center">
+      <%= image_tag 'in-need.png' %>
+           <h5> <%=  link_to "enter",  "/all_animals/animals-in-need"%></h5>
         </div>
       </div>
     </div>
@@ -49,44 +56,6 @@
 
     
     </div>
-          <div class ="row teal accent-3">
-
- <div class ="col s6  white">
-      
-       <h3>Sign up to report animals in need</h3>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
- 
-
-  <div class="actions waves-effect waves-light btn">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-
-
-</div> </div> 
-      <div class="col s12 teal lighten-5"> s</div>
-</div> 
-       
+         
 
 </div>
