--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -1,6 +1,30 @@
 <h3>Search Result</h3>  
 
-    <% @results.each do |result| %>  
-        <%= result.title %><br>  
-        <%= cl_image_tag result.image %>
-    <% end %>
+   
+    <% @results.in_groups_of(3, false).each do |group| %>
+     
+<div class="row">
+    
+ <% group.each do |result| %>
+ <div class="col s4">
+      <div class="card">
+        <div class="card-image">
+          <%= cl_image_tag result.image %>
+          <span class="card-title blue-text text-darken-4"><%= result.title %> , <%= result.status %></span>
+        </div>
+        <div class="card-content">
+          <p> <%= result.description %></p>
+          <p> in <%= result.city %></p>
+          <p>  <%= result.animal_type %>, <%= result.gender %></p>
+        </div>
+        <div class="card-action">
+          <a href=<%= animal_path(result) %>>Details</a>
+        </div>
+      </div>
+       </div>
+      <% end %>
+   
+  </div>  
+  <% end %>
+
+  
