Changed to symbol

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,12 +21,12 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
   <div>
-<%= f.label "username" %>
-<%= f.text_field "username" %>
-</div>
-<div>
-<%= f.label "image" %>
-<%= f.file_field "image" %>
+    <%= f.label :username %>
+    <%= f.text_field :username %>
+    </div>
+    <div>
+    <%= f.label :image %>
+    <%= f.file_field :image %>
 </div>
 
   <div class="actions">
