--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -16,6 +16,7 @@
   <p><%=t(".location")%>: <%= @animal.location %></p>
   <p><%=t(".posted_by")%> :<%=  link_to @animal.user.username ,user_path(@animal.user)%></p>
   <p><%=t(".posted_date")%>:<%= @animal.created_at.strftime "%B %d, %Y"  %></p>
+  <div><%= social_share_button_tag(@animal.title) %></div>
       </div>
       </div>
     <% if current_user &&current_user == @animal.user%> 
@@ -27,6 +28,7 @@
 
       </div>
       
+
       <div class="col s8">
         <!-- Promo Content 2 goes here -->
    <section class="section comments">
