--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+
   </head>
 
   <body>
@@ -30,7 +33,7 @@
        <li> <%= link_to t('.sign_up'), new_user_registration_path %></li>
       <% end %>
       <li><%= form_tag(search_page_path, :method => "get",    class: 'navbar-form navbar-left') do %>   <div class="input-group">  
-    <%= search_field_tag :search, params[:search], placeholder: "Search", class: "form-control" %> </li>
+    <%= search_field_tag :search, params[:search], placeholder: t("site.global.search"), class: "form-control" %> </li>
      <li><div class="input-group-btn">  
       <%= button_tag "search by Microchip", :class => 'btn btn-info glyphicon glyphicon-search',:name => nil%>  
     </div>  
